# intentkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent.yaml  docker-compose.yml  example.env  example.manifest.yaml  lint.sh  pyproject.toml  requirements.txt
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  code-quality.yml  dev.yml  lint.yml  security-scan.yml  testnet-dev.yml
abstracts/: agent.py  ai.py  api.py  exception.py  graph.py  skill.py  twitter.py
app/: ai.py  api.py  auto.py  autonomous.py  config.py  db.py  db_mig.py  main.py  middleware.py  readonly.py  scheduler.py  singleton.py  slack.py  telegram.py  tg.py  twitter.py
app/admin/: __init__.py  admin.py  api.py  credit.py  health.py  metadata.py  scheduler.py  schema.py
app/config/: config.py
app/core/: agent.py  ai.py  api.py  client.py  credit.py  engine.py  graph.py  prompt.py  reigent.py  skill.py
app/entrypoints/: api.py  autonomous.py  tg.py  twitter.py  web.py
app/models/: agent.py  db.py  db_mig.py  skill.py
app/services/twitter/: client.py  oauth2.py  oauth2_callback.py  oauth2_refresh.py
clients/: __init__.py  cdp.py  twitter.py
debug/: create_agent.py
docs/: README.md  agent.md  api.md  architecture.md  configuration.md  create_agent.md  create_agent.sh  llm.md  skills.md  twitter.md
docs/contributing/: skills.md  wishlist.md
docs/how_to/: clean_memory.md  readme.md
docs/skills/: cdp.md  goat.md  x.md
manifests/testnet-dev/: api.yaml  autonomous.yaml
models/: agent.py  agent_schema.json  app_setting.py  base.py  chat.py  credit.py  db.py  db_mig.py  llm.py  llm_reigent.py  redis.py  skill.py
scripts/: batch_migrate_skills.py  create.sh  export.sh  generate_skill_csv.py  import.sh  sync_schema.py  sync_states_schema.py
skill/common/: __init__.py
skill/crestal/: __init__.py  search_web3_services.py
skill_set/: __init__.py  base.py  slack.py
skill_sets/: __init__.py  base.py  slack.py
skills/: __init__.py  async.py  base.py
skills/acolyt/: __init__.py  ask.py  base.py  schema.json
skills/aixbt/: README.md  __init__.py  base.py  projects.py  schema.json
skills/allora/: __init__.py  base.py  price.py  schema.json
skills/cdp/: __init__.py  base.py  get_balance.py  schema.json  tx.py
skills/coingecko/: __init__.py  base.py  crypto_price_checker.py  schema.json
skills/common/: __init__.py  base.py  current_time.py  heurist_image_generation.py  image_edit.py  image_to_text.py  schema.json
skills/crestal/: __init__.py  search_web3_services.py
skills/cryptocompare/: README.md  __init__.py  api.py  base.py  fetch_news.py  fetch_price.py  fetch_top_exchanges.py  fetch_top_market_cap.py  fetch_top_volume.py  fetch_trading_signals.py  schema.json
skills/cryptopanic/: __init__.py  base.py  fetch_crypto_news.py  fetch_crypto_sentiment.py  schema.json
skills/dapplooker/: README.md  __init__.py  base.py  dapplooker_token_data.py  schema.json
skills/defillama/: __init__.py  api.py  base.py  fetch_chains.py  fetch_historical_tvl.py  fetch_protocol.py  fetch_protocols.py  schema.json
skills/defillama/coins/: fetch_batch_historical_prices.py  fetch_block.py  fetch_current_prices.py  fetch_first_price.py  (+3 more)
skills/elfa/: __init__.py  base.py  mention.py  schema.json  stats.py  tokens.py
skills/enso/: README.md  __init__.py  actions.py  base.py  best_yield.py  bundle.py  ipor.py  networks.py  prices.py  quote.py  route.py  schema.json  standards.py  tokens.py  wallet.py
skills/github/: README.md  __init__.py  base.py  github_search.py  schema.json
skills/goat/: __init__.py  base.py
skills/heurist/: __init__.py  base.py  heurist_image_generation.py  image_generation_animagine_xl.py  image_generation_arthemy_comics.py  image_generation_arthemy_real.py  image_generation_braindance.py  image_generation_cyber_realistic_xl.py  image_generation_flux_1_dev.py  image_generation_sdxl.py  schema.json
skills/moralis/: README.md  __init__.py  api.py  base.py  fetch_blockchain_data.py  fetch_blockchain_transaction.py  fetch_solana_portfolio.py  fetch_transaction_history.py  moralis_fetch_chain_portfolio.py  moralis_fetch_nft_portfolio.py  moralis_fetch_solana_portfolio.py  moralis_fetch_transaction_history.py  moralis_fetch_wallet_portfolio.py  schema.json
skills/nation/: __init__.py  base.py  nft_check.py  schema.json
skills/openai/: __init__.py  base.py  dalle_image_generation.py  gpt_image_generation.py  gpt_image_to_image.py  image_to_text.py  schema.json
skills/slack/: __init__.py  base.py  get_channel.py  get_message.py  schedule_message.py  schema.json  send_message.py
skills/tavily/: README.md  __init__.py  base.py  schema.json  tavily_search.py
skills/twitter/: __init__.py  base.py  follow_user.py  get_mentions.py  get_timeline.py  get_user_by_username.py  like_tweet.py  post_tweet.py  reply_tweet.py  retweet.py  schema.json  search_tweets.py
skills/unrealspeech/: __init__.py  base.py  schema.json  text_to_speech.py
skills/venice_image/: __init__.py  base.py  image_generation_fluently_xl.py  image_generation_flux_dev.py  image_generation_flux_dev_uncensored.py  image_generation_lustify_sdxl.py  image_generation_pony_realism.py  image_generation_stable_diffusion_3_5.py  image_generation_venice_sd35.py  input.py  schema.json
skills/wallet/: __init__.py  api.py  base.py  fetch_chain_portfolio.py  fetch_nft_portfolio.py  fetch_solana_portfolio.py  fetch_transaction_history.py  fetch_wallet_portfolio.py  schema.json
skills/wallet_portfolio/: __init__.py  api.py  base.py  fetch_asset_portfolio.py  fetch_chain_portfolio.py  fetch_nft_portfolio.py  fetch_transaction_history.py  fetch_wallet_portfolio.py  schema.json  solana.py
skills/web_search/: README.md  __init__.py  base.py  schema.json  web_search.py
src/: main.py
tg/bot/: pool.py
tg/schedule/: agent.py
tg/utils/: cleanup.py
types/callbacks/: ai.py
utils/: chain.py  chain_helpers.py  logging.py  middleware.py  random.py  s3.py  slack.py  slack_alert.py  solana.py  tx.py
(+46 files in other folders)
