[tool.poetry]
name = "intentkit"
version = "0.1.0"
description = "Intent-based AI Agent Platform"
authors = ["Ruihua <ruihua@crestal.network>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
pydantic = "*"
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.36"
psycopg = "^3.2.3"
psycopg2 = "*"
psycopg-pool = "^3.2.4"
alembic = "^1.14.0"
pgvector = "^0.2.5"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-openai = "^0.2.11"
langchain-postgres = "^0.0.12"
langchain-community = "^0.3.13"
langgraph = "^0.2.61"
langgraph-checkpoint = "^2.0.8"
langgraph-checkpoint-postgres = "^2.0.10"
openai = "^1.59.6"
cdp-langchain = "^0.0.9"
cdp-sdk = "^0.13.0"
cdp-agentkit-core = "^0.0.7"
tweepy = "^4.15.0"
python-dotenv = "^1.0.1"
APScheduler = "^3.11.0"
anyio = "^4.8.0"
slack-sdk = "^3.34.0"
requests = "^2.32.3"
aws-secretsmanager-caching = "^1.1.3"
botocore = "^1.35.97"
aiogram = "^3.17.0"
epyxid = "^0.3.3"

[tool.poetry.group.dev] 
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
