[tool.poetry]
name = "intentkit"
version = "0.1.19"
description = "Intent-based AI Agent Platform"
authors = ["Ruihua <ruihua@crestal.network>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
gunicorn = "^23.0.0"
pydantic = "*"
pydantic-settings = "^2.7.1"
sqlmodel = "^0.0.22"
sqlalchemy = {version = "^2.0.37", extras = ["asyncio"]}
psycopg = "^3.2.3"
psycopg2 = "*"
psycopg-pool = "^3.2.4"
alembic = "^1.14.0"
pgvector = "^0.3.6"
langchain = "^0.3.19"
langchain-core = "^0.3.37"
langchain-openai = "^0.3.6"
langchain-postgres = "^0.0.13"
langchain-community = "^0.3.18"
langgraph = "^0.2.74"
langgraph-checkpoint = "^2.0.16"
langgraph-checkpoint-postgres = "^2.0.15"
openai = "^1.59.6"
cdp-sdk = "0.17.0"
tweepy = {version = "^4.15.0", extras = ["async"]}
python-dotenv = "^1.0.1"
APScheduler = "^3.11.0"
anyio = "^4.8.0"
slack-sdk = "^3.34.0"
requests = "^2.32.3"
aws-secretsmanager-caching = "^1.1.3"
botocore = "^1.35.97"
aiogram = "^3.17.0"
epyxid = "^0.3.3"
sentry-sdk = {version = "^2.20.0", extras = ["fastapi"]}
uvicorn = {version = "^0.34.0", extras = ["standard"]}
asyncpg = "^0.30.0"
goat-sdk = "^0.1.4"
goat-sdk-adapter-langchain = "*"
goat-sdk-wallet-crossmint = "*"
goat-sdk-wallet-evm = "*"
goat-sdk-wallet-web3 = "*"
goat-sdk-wallet-solana = "*"
goat-sdk-plugin-1inch = "*"
goat-sdk-plugin-allora = "*"
goat-sdk-plugin-coingecko = "*"
goat-sdk-plugin-dexscreener = "*"
goat-sdk-plugin-erc20 = "*"
goat-sdk-plugin-farcaster = "*"
goat-sdk-plugin-jsonrpc = "*"
goat-sdk-plugin-jupiter = "*"
goat-sdk-plugin-nansen = "*"
goat-sdk-plugin-opensea = "*"
goat-sdk-plugin-rugcheck = "*"
goat-sdk-plugin-spl-token = "*"
goat-sdk-plugin-superfluid = "*"
goat-sdk-plugin-uniswap = "*"
pyyaml = "^6.0.2"
python-multipart = "^0.0.20"
langchain-xai = "^0.2.1"
coinbase-agentkit = "0.1.4.dev202502250"
coinbase-agentkit-langchain = "^0.1.0"
jsonref = "^1.1.0"
pytz = "^2024.1"

[tool.poetry.group.dev] 
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
